--- a/Styles/style.css
+++ b/Styles/style.css
@@ -36,6 +36,7 @@ body {
 
 .navbar {
     box-shadow: rgba(0, 0, 0, 0.12) 0px 5px 15px;
+    font-weight: 500;
 }
 
 .conteudo {
@@ -203,12 +204,15 @@ body {
     background-color: var(--cor-cinza);
 }
 
-.Tabela {
+.fundo {
     background-color:var(--cor-branco) ;
+}
+
+.Tabela {
     text-align: center;
     padding: 20px 0px 0px 0px;
-    margin:0.5em;
     border-radius: 5px;
+    margin:0.5em;
 }
 
 .Tabela:hover {
@@ -240,6 +244,7 @@ body {
 }
 
 #Tabela__Tex {
+    width: 100%;
     font-size: 15px;
     padding-top: 10px;
     color: var(--cor-cizabtn);
@@ -342,7 +347,7 @@ body {
     align-self: flex-start;
     padding-left: 9%;
     padding-bottom: 2%;
-    width: 45%;
+    width: 50%;
     color:var(--cor-cizabtn);
 }
 
@@ -640,7 +645,7 @@ body {
     background-image: url(../Assets/blog/b-1.jpg);
     background-size: 100% 100%;
     height: 340px;
-    width: 330px;
+    margin-bottom: 1em;
     border-radius: 2%;
     display: flex;
     align-items: end;
@@ -652,7 +657,7 @@ body {
     background-image: url(../Assets/blog/b-2.jpg);
     background-size: 100% 100%;
     height: 340px;
-    width: 330px;
+    margin-bottom: 1em;
     border-radius: 2%;
     display: flex;
     align-items: end;
@@ -664,7 +669,7 @@ body {
     background-image: url(../Assets/blog/b-3.jpg);
     background-size: 100% 100%;
     height: 340px;
-    width: 330px;
+    margin-bottom: 1em;
     border-radius: 2%;
     display: flex;
     align-items: end;
@@ -710,8 +715,9 @@ body {
 }
 
 #gmap_canvas {
-    width: 100%;
-    height: 100%;
+    margin-left: 4em;
+    width: 90%;
+    height: 65%;
     border: 8px solid var(--cor-branco);
     border-radius: 10px;
     -webkit-box-shadow: 5px 0px 37px 17px #000000;
@@ -721,4 +727,227 @@ body {
 .Ori {
     display: flex;
     flex-direction: column;
+}
+
+#form-input {
+    padding: 12px 300px 12px 20px;
+    border: 1px solid var(--cor-cinzaC);
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin-bottom: 25px;
+    font-family:var(--fonte-geral);
+}
+
+.form-btn {
+    margin-top: 8%;
+    margin-bottom: 15%;
+    border-collapse: collapse;
+    background-color:var(--cor-roxo);
+    border-radius: 20px;
+    width: 25%;
+    padding: 10px;
+    text-decoration: none;
+    justify-content: center;
+    font-size: 0.813rem;
+    color:var(--cor-branco);
+    text-align: center;
+    -webkit-box-shadow: 5px 0px 37px 17px #000000;
+    box-shadow: 0px 6px 0px 0px #e2e2e2;
+    border: 1px solid var(--cor-roxo);
+}
+
+.form-btn:hover {
+    background-color: var(--cor-branco);
+    color:var(--cor-roxo);
+}
+
+#form-text {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 195px 0 20px;
+    border: 1px solid var(--cor-cinzaC);
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    font-family:var(--fonte-geral);
+
+}
+
+#Tabela__Text {
+    color: var(--cor-cizabtn);
+    padding-left: 5px;
+    margin: 10px 0 0 0;
+}
+
+#Tabela__Ti {
+    color: var(--cor-preto);
+    font-size: 20px;
+}
+
+#Tabela__Ti:Hover {
+    color:var(--cor-roxo)
+}
+
+#Tabela__Texts {
+    color: var(--cor-cizabtn);
+    padding-bottom: 1em;
+}
+
+.Conteudo__Serv__Tabelamob {
+    display: none;
+}
+
+.footer {
+    padding: 15px;
+    text-align: center;
+    color:var(--cor-branco);
+    background-color: #1d2941;
+}
+
+.sub-footer {
+    padding: 80px;
+    text-align: center;
+    background-color: #152137;
+    color:var(--cor-branco);
+}
+
+
+#footer-cont {
+    gap: 15px;
+    padding-right: 21%;
+    padding-left: 21%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-btn-ori {
+    margin-top: 5px;
+    align-items: flex-end;
+    display:flex;
+    flex-direction:row;
+    justify-content:flex-start;
+    gap:20px;
+    font-size: 20px;
+}
+
+.footer-btn {
+    display: flex;
+    background-color: #1d2941;
+    border-collapse: collapse;
+    border: 1px solid #1d2941;
+    border-radius: 30px;
+    padding: 15px;
+    color: var(--cor-branco);
+    text-decoration: none;
+    justify-content: center;
+}
+
+.Hide {
+    display: none;
+}
+
+@media screen and (max-width:760px) {
+    
+.Conteudo__About__P {
+    padding: 0 10% 3% 10%;
+    font-size: 0.938rem;
+    color:var(--cor-cizabtn);
+}
+
+.conteudo__Banner {
+    margin-top: 3em;
+    height: 100%;
+    width: 100%;
+    background-image: url(../Assets/banner/Banner_mob.png);
+    background-size: 100%  100%;
+    background-repeat: no-repeat;
+
+}
+
+#Banner__subtitle {
+    color: var(--cor-roxo);
+    font-size: 1.563rem;
+    font-weight: 600;
+
+}
+
+#Banner__title {
+    font-size: 2.200rem;
+    color:var(--cor-preto);
+ }
+
+ .conteudo__banner__View {
+    display: flex;
+    flex-direction: column;
+    padding: 30% 2% 35% 5%;
+    gap: 20px;
+
+}
+
+.Conteudo__Banner__View__Btn {
+    align-self: flex-start;
+    display: flex;
+    width: 40%;
+    padding: 10px;
+}
+
+.conteudo__Btn {
+    align-items: flex-end;
+    display:flex;
+    flex-direction:row;
+    justify-content:flex-start;
+    gap:2px;
+    margin-bottom:
+     12%;
+}
+#linha_horizontal {
+    display: flex;
+    width: 20px;
+    border: 1px solid var(--cor-roxo);
+    margin: 0 2% 4% 0;
+
+}
+
+.Conteudo__Serv__Img {
+    background-image: url(../Assets/call.jpg);
+    height: 29em;
+    width: 100%;
+}
+
+#Cor__Img {
+    height: 29em;
+    gap:20px;
+    display: flex;
+    text-align: center;
+}
+
+.Conteudo__Serv__Img__Tex {
+    width: 80%;
+    text-align: center;
+}
+
+#Conteudo__Ori {
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.Conteudo__Port__P {
+    padding-left: 5%;
+    width: 90%;
+}
+
+
+#footer-cont {
+    gap: 15px;
+    padding-right: 0%;
+    padding-left: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 }
