--- a/Styles/style.css
+++ b/Styles/style.css
@@ -717,7 +717,7 @@ body {
 #gmap_canvas {
     margin-left: 4em;
     width: 90%;
-    height: 65%;
+    height: 20em;
     border: 8px solid var(--cor-branco);
     border-radius: 10px;
     -webkit-box-shadow: 5px 0px 37px 17px #000000;
@@ -846,6 +846,60 @@ body {
 
 .Hide {
     display: none;
+}
+
+.Conteudo__cont__View__Btn {
+    margin-top: 2%;
+    border-collapse: collapse;
+    background-color:var(--cor-roxo);
+    width: 30%;
+    border-radius: 20px;
+    padding: 10px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    font-size: 0.813rem;
+    color:var(--cor-branco);
+    text-align: center;
+    -webkit-box-shadow: 5px 0px 37px 17px #000000;
+    box-shadow: 0px 6px 0px 0px #e2e2e2;
+    border: 1px solid var(--cor-roxo);
+}
+
+.Conteudo__cont__View__Btn:hover {
+    background-color:var(--cor-branco);
+    border: 1px solid var(--cor-roxo);
+    color: var(--cor-roxo);
+}
+
+textarea {
+    resize: none;
+  }
+
+.mensagem-erro {
+    color: red;
+    display: flex;
+}
+
+
+.msg {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#msg__I {
+    color:var(--cor-roxo);
+    font-size: 90px;
+    display: flex;
+    justify-content: center;
+}
+
+#msg__Ti {
+    font-size: 2rem;
 }
 
 @media screen and (max-width:760px) {
